tests/invalid/class_no_lt_comparison/main.py
class C:
    pass


def run_case() -> None:
    a = C()
    b = C()
    a < b


if __name__ == "__main__":
    run_case()
